[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["libo <libo@huanqiu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
skip = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "app:main"