[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["libo <libo@huanqiu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
redis = "^5.0.3"
requests = "^2.31.0"
pyjwt = "^2.8.0"
pymysql = "^1.1.0"
cryptography = "^42.0.5"

[tool.poetry.group.dev.dependencies]
skip = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"